-----------------------------------------------------------------------
*** libkvutils - changes and additions to the public interfaces     ***
-----------------------------------------------------------------------

2000-09-30  Kai Vehmanen <kaiv@wakkanet.fi>	

	* definition_by_contract.h (all): lots of changed in the public
	interface
	
2000-04-11  Kai Vehmanen <kaiv@wakkanet.fi>	

	* kvutils.cpp (print_time_stamp): added
	* library version changed to 1:0:0
	
2000-03-24  Kai Vehmanen <kaiv@wakkanet.fi>	

	* com_line.h (combine): a new overloaded version
	
2000-03-21  Kai Vehmanen <kaiv@wakkanet.fi>	

	* object_queue.h: added
	* changes in all interfaces
	* library version set to 0:0:0 (current:revision:age)
	
-----------------------------------------------------------------------