@@ -9,7 +9,7 @@ Kvutils is freely distributable according to the terms of the GNU
 General Public License (see the file 'COPYING').
 
 For more info about projects in which kvutils library is used,
-see http://eca.cx
+see http://www.eca.cx
 
 Copyright (C) 1997-2000 Kai Vehmanen <kaiv@wakkanet.fi>
 
