@@ -2,10 +2,18 @@
 *** libkvutils - changes and additions to the public interfaces     ***
 -----------------------------------------------------------------------
 
+2000-10-17  Kai Vehmanen <kaiv@wakkanet.fi>	
+
+	* object_queue.h (all): few member functions renamed, pthread
+	locking changes
+	* command_queue.h (all): removed as obsolete
+	* locks.h (pthread_mutex_spinlock): added
+	
 2000-09-30  Kai Vehmanen <kaiv@wakkanet.fi>	
 
 	* definition_by_contract.h (all): lots of changed in the public
 	interface
+	* library version changed to 2:0:0
 	
 2000-04-11  Kai Vehmanen <kaiv@wakkanet.fi>	
 
